# agent-tunix

./: .env.example  .gitignore  .readthedocs.yaml  DOCUMENTATION.md  HYDRA_USAGE.md  MAKEFILE_TEST_RESULTS.md  Makefile  QUICK_REFERENCE.md  README.md  evaluate.py  pyproject.toml  pytest.ini  run_training.py
conf/: config.yaml
conf/evaluation/: default.yaml
conf/experiment/: full_training.yaml  quick_test.yaml
conf/generation/: default.yaml
conf/grpo/: default.yaml
conf/model/: gemma3_1b.yaml  gemma3_270m.yaml  gemma3_test.yaml
conf/optimizer/: adamw.yaml
conf/scheduler/: warmup_cosine.yaml
conf/training/: default.yaml
docs/: BUILD.md  Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/advanced/: custom_rewards.doctree  distributed_training.doctree  troubleshooting.doctree
docs/_build/doctrees/api/: data.doctree  evaluate.doctree  models.doctree  rewards.doctree  train.doctree
docs/_build/doctrees/config/: model.doctree  optimizer.doctree  overview.doctree  training.doctree
docs/_build/doctrees/getting_started/: configuration.doctree  installation.doctree  quick_start.doctree
docs/_build/doctrees/guide/: evaluation.doctree  experiments.doctree  hyperparameter_tuning.doctree  training.doctree
docs/_build/doctrees/references/: faq.doctree  glossary.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/advanced/: custom_rewards.html  distributed_training.html  troubleshooting.html
docs/_build/html/api/: data.html  evaluate.html  models.html  rewards.html  train.html
docs/_build/html/config/: model.html  optimizer.html  overview.html  training.html
docs/_build/html/getting_started/: configuration.html  installation.html  quick_start.html
docs/_build/html/guide/: evaluation.html  experiments.html  (+2 more)
docs/advanced/: custom_rewards.rst  distributed_training.rst  troubleshooting.rst
docs/api/: evaluate.rst  models.rst
docs/getting_started/: configuration.rst  installation.rst  quick_start.rst
docs/guide/: experiments.rst  hyperparameter_tuning.rst
docs/references/: faq.rst
src/agent_tunix/: __init__.py  cli.py  config.py  data.py  evaluate.py  models.py  rewards.py  train.py  utils.py
tests/: __init__.py  test_config.py  test_rewards.py  test_utils.py
(+28 files in other folders)
